tests/features/error_handling/exception_model.out
--- Test: Exception Model ---
--- Case 1: Specific error type with model ---
C1 trap
Type: NameError
Message: 'missing_var' is not defined
[E3001] Traceback (most recent call last):
  File tests/features/error_handling/exception_model.sad, line 5, in <program>
        x = missing_var
            ^^^^^^^^^^^
NameError: 'missing_var' is not defined
  Hint: Check for typos or make sure the variable is assigned before use.
C1 clean
--- Case 2: Multiple traps order ---
C2 div
[E5002] Traceback (most recent call last):
  File tests/features/error_handling/exception_model.sad, line 17, in <program>
        a = 10 / 0
                 ^
DivisionByZeroError: Division by zero
  Hint: Check that the divisor is not zero before dividing. Example: `when b != 0 { result = a / b }`
C2 clean
--- Case 3: Wildcard trap ---
C3 default
C3 clean
--- Case 4: No error, trap skipped ---
C4 ok
C4 clean
--- Case 5: Clean only ---
C5 ok
C5 clean
--- Case 6: Specific before wildcard ---
C6 name
[E3001] Traceback (most recent call last):
  File tests/features/error_handling/exception_model.sad, line 56, in <program>
        z = missing_specific
            ^^^^^^^^^^^^^^^^
NameError: 'missing_specific' is not defined
  Hint: Check for typos or make sure the variable is assigned before use.
C6 clean
--- Case 7: Nested risk/clean ---
C7 outer start
C7 inner trap
[E5002] Traceback (most recent call last):
  File tests/features/error_handling/exception_model.sad, line 70, in <program>
            b = 1 / 0
                    ^
DivisionByZeroError: Division by zero
  Hint: Check that the divisor is not zero before dividing. Example: `when b != 0 { result = a / b }`
C7 inner clean
C7 outer after
C7 outer clean
--- Stress Test: Trapping IllegalOperationError ---
Caught IllegalOperationError:
  Expected a Number type
--- Stress Test: Trapping TypeError ---
Caught TypeError:
  'not_a_model' is not a class and cannot be inherited from
--- Stress Test: Trapping ValueError ---
Caught ValueError:
  Expected 2 values to unpack, but got 1
--- Stress Test: Trapping IndexOutOfBoundsError ---
Caught IndexOutOfBoundsError:
  Index out of bounds
--- Stress Test: Trapping DictKeyError ---
Caught DictKeyError:
  Key does not exist
--- Stress Test: Manual exception trigger via error() ---
Caught manual error via error() as IllegalOperationError:
  This is a manual failure trigger!
